@@ -102,6 +102,7 @@
   *  - Fixed USBtoSerial and XPLAINBridge demos discarding data from the PC if the send buffer becomes full
   *  - Fixed broken input in the MagStripe reader project due to an incorrect HID report descriptor
   *  - Fixed incorrect PollingIntervalMS values in the demo/project/bootloader endpoint descriptors (thanks to MCS Electronics)
+  *  - Fixed AVRISP-MKII clone project not starting the target's program automatically after exiting TPI programming mode
   *
   *  \section Sec_ChangeLog100807 Version 100807
   *  <b>New:</b>
